# yolov_ros2

./: README.md  package.xml  setup.py
yolov5_ros2/: yolov5_ros2.py
